# RAG-to-Riches

./: CreateSqlLite.py  README.md  devcontainer.json  enviroment.yml  players.db  pyproject.toml  requirements.txt  start.sh
.github/workflows/: codespace-setup.yml
.streamlit/: secrets.toml
Langchain_streamlit_rag/: README.md  enviroment.yml  pyproject.toml  rag.py  requirements.txt  start.sh
Langchain_streamlit_rag/.streamlit/: secrets-example.toml
src/: 2-basicllm.py  3-ragText.py  4-ragPDF.py  5-ragWebsite.py  6-ragDB.py  6-toolCalling.py
